  - terrain: added 2 new terrain ramps for use in very flat countries
  - add head wind component to V GND Infobox #1439
  - add V task leg Infobox #1767
  - PEV start wait/window times now have second accuraccy #1099
  - show station names in airspace details dialog
  - show squawk code in airspace details dialog
  - ability to send squawk code from airspace details dialog to transponder
* Android
  - fix crash on startup when loading icons on ldpi screens
  - update 'white list' of USB devices with one more VID/PID pair for SoftRF Academy
  - make xcsoar accessible from lock screen
  - battery: use scale for charge percent calculation
  - battery: prevent shutdown on devices without battery
* Windows
  - Popupmessages are now shown with full text again
* devices
  - Add driver for Condor 3
  - Add driver for LX Navigation Eos / Era variometers
  - Add driver for Stratux
  - Flarm: parse flarm error messages (PFLAE) and display them
  - Flarm: add support for PowerFlarm configuration
  - PowerFlarm: make range / vrange configurable for adbs and pcas
  - PowerFlarm: support additional higher baud rates
  - LXNAV: parse acceleration/g-load from PLXVF sentence
  - LXNAV: Overload formula, use reference mass instead of dry mass
  - OpenVario: Overload formula, use reference mass instead of dry mass
  - Vaulter: use fraction instead of overload for ballast
  - Devices: Switch to manual MC when set via external Device
  - AirControlDisplay: Read-out transponder mode
  - Larus: Protocol 0.1.4 add OAT,GLoad,Circling/Cruise
  - SerialPorts: add 230400 baud support
  - Add port 4000 to tcp-client
* Polar:
  - LS8-15m: default polar, set to values according to flight manual
* Weglide:
  - add button under config menu to tigger IGC upload
* Task:
  - Reachable abort task landable waypoints are now sorted by arrival altitude
    instead of arrival time.

Version 7.43 - 2024-08-12
* calculations
  - CRITICAL: reachable map labels show correct altitude with head wind #1424